--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "jest",
+    "test watch": "jest --watchAll"
   },
   "dependencies": {
     "@types/styled-components": "^5.1.12",
@@ -13,6 +15,12 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@swc/core": "^1.2.248",
+    "@swc/jest": "^0.2.22",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^12.1.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
@@ -23,6 +31,9 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.7",
+    "jest": "^29.0.2",
+    "jest-environment-jsdom": "^29.0.2",
+    "ts-node": "^10.9.1",
     "typescript": "*",
     "vite": "^2.4.4"
   }
